// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-text renders rich text marks 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <strong>
            Bold
          </strong>
          , 
          <em>
            italic
          </em>
          , 
          <u>
            underlined
          </u>
          , 
          <del>
            struck
          </del>
           and 
          <span
            style="color: #FF0000"
          >
            colored
          </span>
          .
          <br />
          Second line.
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`block-text renders with default values 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`block-text renders with safe markdown 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          <p>
            This 
            <span>
              text
            </span>
             block has the 
            <strong>
              Markdown
            </strong>
             option 
            <em>
              turned on
            </em>
            .
          </p>
          

          <ul>
            

            <li>
              One
            </li>
            

            <li>
              Two
            </li>
            

            <li>
              Three
            </li>
            

          </ul>
          

          <p>
            Powered by 
            <a
              href="https://usewaypoint.com"
              target="_blank"
            >
              Waypoint
            </a>
          </p>
          

        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`block-text renders without markdown 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          ## This is not &lt;span&gt;markdown&lt;/span&gt;
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`block-text sanitizes HTML 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          

          <img
            src="x"
          />
          


          <p>
            <a
              target="_blank"
            >
              a
            </a>
            <br />
            <a
              target="_blank"
            >
              Basic
            </a>
            <br />
            <a
              target="_blank"
            >
              Local Storage
            </a>
            <br />
            <a
              target="_blank"
            >
              CaseInsensitive
            </a>
            <br />
            <a
              target="_blank"
            >
              URL
            </a>
          </p>
          

          <p>
            <a
              target="_blank"
            >
              In Quotes
            </a>
            <br />
            [a](j a v a s c r i p t:prompt(document.cookie))
            <br />
            <a
              target="_blank"
            >
              a
            </a>
            <br />
            <a
              target="_blank"
            >
              a
            </a>
            <br />
            <img
              alt="Uh oh..."
              src="%22onerror=%22alert('XSS')"
            />
            <br />
            <img
              alt="Uh oh..."
              src="https://www.example.com/image.png%22onload=%22alert('XSS')"
            />
            <br />
            <img
              alt="Escape SRC - onload"
              src="https://www.example.com/image.png%22onload=%22alert('ImageOnLoad')"
            />
            <br />
            <img
              alt="Escape SRC - onerror"
              src="%22onerror=%22alert('ImageOnError')"
            />
          </p>
          

          <div>
            

            <img
              src=""
            />
            

            <a>
              link 1
            </a>
            

            <a
              href=""
            >
              link 2
            </a>
            

            <a
              href=""
            >
              link 3
            </a>
            

            <a
              title=""
            >
              link 4
            </a>
            

            <a
              title=""
            >
              link 5
            </a>
            

            <a>
              link 6
            </a>
            

            <a>
              link 7
            </a>
            

          </div>
          

        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`block-text sanitizes rich text 1`] = `
<DocumentFragment>
  <table
    border="0"
    cellpadding="0"
    cellspacing="0"
    role="presentation"
    style="width: 100%;"
    width="100%"
  >
    <tbody>
      <tr>
        <td>
          



          <span
            style="color: #00FF00"
          >
            handler dropped, color kept
          </span>
          

          <span>
            url dropped
          </span>
          

          <span>
            rgb dropped
          </span>
          

          <span
            style="color: #0000FF"
          >
            only the color survives
          </span>
          

          <a>
            link 1
          </a>
          

          <a
            href="https://example.com"
          >
            link 2
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
